objects/Opportunity_Clone_Fields_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This setting is used to store the clone fields and default value for Oppty clone function.</description>
    <fields>
        <fullName>Default_Value__c</fullName>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Record_Type_Id__c</fullName>
        <label>Parent Record Type Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <label>Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Opportunity Clone Fields Settings</label>
</CustomObject>